# DNMD

./: .gitignore  CMakeLists.txt  Directory.Build.props  configure.cmake  global.json  nuget.config
.github/workflows/: main.yml  publish-test-results.yml
TestResults/70c686e7-6d42-450f-99ba-e8caa33c201a/: jekoritz_JEKORITZ_2024-02-15.14_59_51.coverage
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake  dnmd-config.cmake
_codeql_build_dir/src/dnmd/: Makefile  cmake_install.cmake
_codeql_build_dir/src/interfaces/: Makefile  cmake_install.cmake
_codeql_build_dir/src/mddump/: Makefile  cmake_install.cmake  mddump
_codeql_build_dir/src/mdmerge/: Makefile  cmake_install.cmake  mdmerge
_codeql_build_dir/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/test/emit/: CTestTestfile.cmake  Makefile  cmake_install.cmake  emit[1]_include.cmake  emit[1]_tests.cmake
_codeql_build_dir/test/regpal/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/test/regperf/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/test/regtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  regtest[1]_include.cmake
src/: CMakeLists.txt  config.cmake.in
src/dnmd/: CMakeLists.txt  access.c  bytes.c  deltas.c  editor.c  entry.c  internal.h  pdb_blobs.c  query.c  search.template  search.template.h  streams.c  tables.c  write.c
src/inc/: dnmd.h  dnmd.hpp  dnmd_interfaces.hpp  dnmd_pdb.h
src/inc/internal/: configure.h.in  dnmd_platform.hpp  dnmd_tools_platform.hpp  span.hpp
src/interfaces/: CMakeLists.txt  controllingiunknown.hpp  dispenser.cpp  dnmdowner.hpp  hcorenum.cpp  hcorenum.hpp  iids.cpp  impl.hpp  importhelpers.cpp  importhelpers.hpp  metadataemit.cpp  metadataemit.hpp  metadataemithelpers.cpp  metadataemithelpers.hpp  metadataimport.cpp  metadataimportro.hpp  options.cpp  pal.cpp  pal.hpp  signatures.cpp  signatures.hpp  symbinder.cpp  tearoffbase.hpp  threadsafe.hpp
src/mddump/: CMakeLists.txt  main.cpp
src/mdmerge/: main.cpp
test/: CMakeLists.txt  DNMD.Tests.sln  FindNetHost.cmake  FindNetHostDir.proj  ImportManagedComponents.cmake
test/Common/: Dispensers.cs  IMetaDataAssemblyImport.cs  IMetaDataDispenser.cs  IMetaDataEmit.cs
test/Regression.CoreClrLocator/: Program.cs
test/Regression.DeltaAssembly/: Class1.cs  Class1.v1.cs  Class2.cs  Class2.v1.cs  Regression.DeltaAssembly.csproj  deltascript.json
test/Regression.DeltaBuilder/: Program.cs  Regression.DeltaBuilder.csproj
test/Regression.Locator/: DeltaImageBuilder.cs  LocatorHelpers.cs  Regression.Locator.csproj
test/Regression.Performance/: Regression.Performance.csproj
test/Regression.UnitTests/: ImportTests.cs  Regression.UnitTests.csproj
test/emit/: CMakeLists.txt  assembly.cpp  assemblyref.cpp  emit.hpp  methoddef.cpp  param.cpp  typedef.cpp  typeref.cpp
test/regfuzz/: CMakeLists.txt  baseline.h  metadata.cpp
test/regnative/: CMakeLists.txt  perf.cpp  regnative.hpp  unit.cpp  unit_cor.cpp  unit_corsym.cpp
test/regpal/: CMakeLists.txt  pal.cpp  pal.hpp
test/regperf/: CMakeLists.txt  perf.cpp
test/regtest/: CMakeLists.txt  asserts.h  baseline.h  discovery.cpp  fixtures.h  main.cpp  metadata.cpp  pal.cpp  pal.hpp
test/sanitizers/: lsan.supp  ubsan.supp
